[package]
name = "conta"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
hmac = "0.12.1"
http = "1.0.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
securestore = "0.100.0"
serde = "1.0.193"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

