[package]
name = "conta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "string"] }
hmac = "0.12.1"
http = "1.0.0"
jsonwebtoken = "9.2.0"
inquire = { version = "0.6.2", features = ["date"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

